--- a/Querida.html
+++ b/Querida.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Style3.css">
+    <link rel="stylesheet" href="style.css">
     <title>Carta de amor </title>
 </head>
 <body>
@@ -31,4 +31,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
